# bbprepared

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish_release.yml  tests.yml
docs/source/: bbprep.rst  building_blocks.rst  conf.py  containers.rst  generators.rst  index.rst  modifiers.rst  modules.rst  processes.rst  recipes.rst  selectors.rst
docs/source/_autosummary/: bbprep.ClosestFGs.rst  bbprep.Conformer.rst  bbprep.DitopicFitter.rst  bbprep.EnergyCalculator.rst  bbprep.Ensemble.rst  bbprep.FurthestFGs.rst  bbprep.MinimiseAngle.rst  bbprep.Modifier.rst  bbprep.Optimiser.rst  bbprep.PanelBuildingBlock.rst  bbprep.Planarfy.rst  bbprep.Process.rst  bbprep.RandomFGs.rst  bbprep.ReorientC1Panel.rst  bbprep.ReorientC2Panel.rst  bbprep.ReorientPanel.rst  bbprep.TargetProcess.rst  bbprep.TargetTorsion.rst  bbprep.generators.AngleRange.rst  bbprep.generators.BondRange.rst  bbprep.generators.ETKDG.rst  bbprep.generators.Generator.rst  bbprep.generators.GeometryScanner.rst  bbprep.generators.SelectorDistanceScanner.rst  bbprep.generators.TargetTorsion.rst  bbprep.generators.TorsionRange.rst  bbprep.generators.TorsionScanner.rst  bbprep.generators.rst  bbprep.rst  bbprep.selectors.AllNonHSelector.rst  bbprep.selectors.AllSelector.rst  bbprep.selectors.BindersSelector.rst  bbprep.selectors.ByIdSelector.rst  bbprep.selectors.BySmartsSelector.rst  bbprep.selectors.DeletersSelector.rst  bbprep.selectors.NotPlacersSelector.rst  bbprep.selectors.NullSelector.rst  bbprep.selectors.Selector.rst  bbprep.selectors.XCOMXSelector.rst  bbprep.selectors.rst
docs/source/recipes/: recipe_1.rst  recipe_2.rst
examples/: ensembles.py  testable_example.py
examples/out_ensembles/: low_e_1.mol  low_e_2.mol
src/bbprep/: __init__.py  _version.py  generators.py  selectors.py
src/bbprep/_internal/ensemble/: calculators.py  ensemble.py
src/bbprep/_internal/generators/: etkdg.py  generator.py  geometry_scanner.py  scanner_by_selector.py  targets.py  torsion_scanner.py
src/bbprep/_internal/modifiers/: distanced_functional_groups.py  modifier.py  random_functional_groups.py  reorient_panel.py
src/bbprep/_internal/processes/: angle.py  ditopicfitter.py  planarfy.py  process.py  torsion.py  utilities.py
src/bbprep/_internal/selectors/: all_selector.py  binders.py  by_id.py  by_smarts.py  deleters.py  notplacers.py  selector.py  xcomx.py
src/testcode/: code.py  utilities.py
tests/angle_test/: angle_molecule0_min.mol  angle_molecule1_min.mol  angle_molecule2_min.mol  case_data.py  conftest.py  test_minimiseangle.py
tests/distanced_test/: case_data.py  conftest.py  dist_molecule0_clo.xyz  dist_molecule0_fur.xyz  dist_molecule1_clo.xyz  dist_molecule1_fur.xyz  dist_molecule2_clo.xyz  dist_molecule2_fur.xyz  dist_molecule3_clo.xyz  dist_molecule3_fur.xyz  test_closest.py  test_furthest.py  test_random.py
tests/ditopic_test/: case_data.py  conftest.py  ditopic_molecule0_min.mol  ditopic_molecule1_min.mol  ditopic_molecule2_min.mol  test_ditopicfitter.py
tests/example_test/: case_data.py  conftest.py  test_example.py
tests/panel_test/: case_data.py  conftest.py  panel_molecule0.xyz  panel_molecule0_final.mol  panel_molecule1.xyz  panel_molecule1_final.mol  panel_molecule2.xyz  panel_molecule2_final.mol  panel_molecule3.xyz  panel_molecule3_final.mol  panel_molecule4.xyz  panel_molecule4_final.mol  panel_molecule5.xyz  panel_molecule5_final.mol  test_reorientpanel.py
tests/planarfy_test/: case_data.py  conftest.py  planar_molecule0_min.mol  planar_molecule1_min.mol  planar_molecule2_min.mol  planar_molecule3_min.mol  test_planarfy.py
tests/scan_test/: case_data.py  conftest.py  test_geometryscanner.py
tests/torsion_test/: case_data.py  conftest.py  test_targettorsion.py  torsion_molecule0_best.mol  torsion_molecule1_best.mol  torsion_molecule2_best.mol  torsion_molecule3_best.mol
